--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <!-- 设计规范颜色值 begin -->
 
     <!-- 主背景色值 -->
-    <color name="background_color">#fff8f8f8</color>
+    <color name="background_color">#f8f8f8</color>
     <color name="status_bar_bg">#EF3A19</color>
     <color name="main_header_bg">#EF3A19</color>
     <color name="main_footer_bg">#f5f5f5</color>
