修改修改密码界面

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -17,27 +17,13 @@
         android:paddingLeft="@dimen/space_30"
         android:paddingRight="@dimen/space_30">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dip"
-            android:src="@mipmap/ic_logo" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="@string/forget_pw_text"
-            android:textColor="@color/login_text_color"
-            android:textSize="@dimen/text_size_22" />
 
         <EditText
             android:id="@+id/mobile_edit"
             style="@style/edit_blue"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginTop="@dimen/space_26"
+            android:layout_marginTop="30dp"
             android:hint="@string/phone"
             android:inputType="number"
             android:maxLength="11"
@@ -88,7 +74,7 @@
             android:layout_height="40dip"
             android:layout_marginTop="@dimen/space_25"
             android:background="@drawable/btn_bg_selecter"
-            android:text="@string/next"
+            android:text="修改"
             android:textColor="@color/text_color_white"
             android:textSize="@dimen/text_size_18" />
 
