--- a/app/src/main/res/layout/top_title.xml
+++ b/app/src/main/res/layout/top_title.xml
@@ -4,25 +4,42 @@
     android:layout_height="48dp"
     android:background="@color/color_home_topbar">
 
-    <ImageView
-        android:id="@+id/back_img"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:padding="8dp"
-        android:src="@drawable/btn_back" />
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/back_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:padding="8dp"
+            android:src="@drawable/btn_back" />
+
+        <TextView
+            android:id="@+id/left_txt_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="18dp"
+            android:visibility="gone"
+            android:layout_toRightOf="@+id/back_img"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_18"
+            android:text="关闭"/>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/title_name"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
-        android:text="更多"
-        android:singleLine="true"
+        android:layout_centerInParent="true"
         android:ellipsize="end"
+        android:gravity="center"
+        android:singleLine="true"
+        android:text="更多"
         android:textColor="@color/text_color_white"
         android:textSize="18sp" />
 
@@ -33,17 +50,17 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="18dp"
-        android:visibility="gone"
-        android:src="@mipmap/bg_setting_off" />
+        android:src="@mipmap/bg_setting_off"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/right_txt_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_14"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="18dp"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_14"
         android:visibility="gone" />
 </RelativeLayout>
