--- a/app/src/main/res/layout/fragment_home_frg.xml
+++ b/app/src/main/res/layout/fragment_home_frg.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/top_title"></include>
+    <include layout="@layout/top_title"/>
 
     <com.hxqydyl.app.ys.ui.library.PullToRefreshScrollView
         xmlns:ptr="http://schemas.android.com/apk/res-auto"
@@ -22,7 +22,7 @@
         ptr:ptrHeaderBackground="@null"
         ptr:ptrHeaderTextColor="@color/text_color_black" >
 
-        <include layout="@layout/home_header"></include>
+        <include layout="@layout/home_header"/>
     </com.hxqydyl.app.ys.ui.library.PullToRefreshScrollView>
 
 </LinearLayout>
