--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,4 +5,9 @@
         <item>从相册选择</item>
         <item>取消</item>
     </string-array>
+
+    <string-array name="video_titles">
+        <item>正在热播</item>
+        <item>全部课程</item>
+    </string-array>
 </resources>
