--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -75,6 +75,10 @@
     <color name="gray_white">#F5F5F5</color>
     <color name="gray_slate">#708090</color>
     <color name="blue_light">#0083FF</color>
+    <color name="divider_color">#55504a</color>
+    <color name="biz_audio_progress_first">#ffffff</color>
+    <color name="biz_audio_progress_second">#6b6666</color>
+    <color name="biz_audio_progress_bg">#00b2ff</color>
 
     <!--login-->
     <color name="login_text_color">#696969</color>
