--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,6 +43,15 @@
         <item name="android:textColor">@color/vpi__background_holo_dark</item>
     </style>
 
+    <style name="video_progressbar_style">
+        <item name="android:maxWidth">43.0dip</item>
+        <item name="android:maxHeight">43.0dip</item>
+        <item name="android:indeterminateDrawable">@anim/biz_news_detailpage_loading_large_anim
+        </item>
+        <item name="android:minWidth">43.0dip</item>
+        <item name="android:minHeight">43.0dip</item>
+    </style>
+
     <style name="footer_bar">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">fill_parent</item>
