--- a/app/src/main/res/layout/top_title.xml
+++ b/app/src/main/res/layout/top_title.xml
@@ -10,11 +10,12 @@
 
         <ImageView
             android:id="@+id/back_img"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
             android:padding="8dp"
+            android:gravity="center"
+            android:scaleType="center"
             android:src="@drawable/btn_back" />
 
         <TextView
