--- a/app/src/main/res/layout/layout_main_footer.xml
+++ b/app/src/main/res/layout/layout_main_footer.xml
@@ -54,15 +54,41 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <View
+        <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null">
 
+            <View
+                android:id="@+id/viewSplitLine2"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:background="@null" />
+
+            <TextView
+                android:id="@+id/textUnreadLabel2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="2dp"
+                android:layout_toEndOf="@+id/viewSplitLine2"
+                android:layout_toRightOf="@+id/viewSplitLine2"
+                android:gravity="center"
+                android:drawableTop="@drawable/red_poi"
+                android:visibility="gone"
+                android:textColor="#ffffff"
+                android:textSize="@dimen/text_size_13" />
+            <!--                android:background="@mipmap/ic_bg_unread_count"
+-->
+        </RelativeLayout>
+<!--
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1" />-->
 
         <RelativeLayout
             android:layout_width="0dp"
