--- a/app/src/main/res/layout/home_grid_item.xml
+++ b/app/src/main/res/layout/home_grid_item.xml
@@ -10,8 +10,8 @@
         android:layout_height="fill_parent"
         android:layout_centerInParent="true"
         android:background="@color/white"
-        android:paddingBottom="@dimen/space_30"
-        android:paddingTop="@dimen/space_30">
+        android:paddingBottom="46dp"
+        android:paddingTop="46dp">
 
         <ImageView
             android:id="@+id/iv_item"
